...
                                Padding(
                                  padding: const EdgeInsetsDirectional.fromSTEB(
                                      0.0, 0.0, 0.0, 16.0),
                                  child: SizedBox(
                                    width: 370.0,
                                    child: TextFormField(
                                      key: const ValueKey('emailAddress_js2b'),
                                      controller: _model.emailAddressController,
                                      focusNode: _model.emailAddressFocusNode,
                                      onFieldSubmitted: (_) async {
                                        setState(() {
                                          _model.emailAddressController?.text =
                                              _model
...
                                Padding(
                                  padding: const EdgeInsetsDirectional.fromSTEB(
                                      0.0, 0.0, 0.0, 16.0),
                                  child: SizedBox(
                                    width: 370.0,
                                    child: TextFormField(
                                      key: const ValueKey('password_i3b0'),
                                      controller: _model.passwordController,
                                      focusNode: _model.passwordFocusNode,
                                      onFieldSubmitted: (_) async {
                                        setState(() {
                                          _model.passwordController?.text =
                                              _model.passwordController.text;
...
                                  ),
                                ),
                                Padding(
                                  padding: const EdgeInsetsDirectional.fromSTEB(
                                      0.0, 0.0, 0.0, 16.0),
                                  child: FFButtonWidget(
                                    key: const ValueKey('Button_c5r6'),
                                    onPressed: () async {
                                      GoRouter.of(context).prepareAuthEvent();

                                      final user =
                                          await authManager.signInWithEmail(
                                        context,
...
